feat: initial Kotlin backend with arrival batch job and AWS SSM integration

--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,19 @@ gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
+# Gradle
+.gradle/
+build/
 
-# Cache of project
-.gradletasknamecache
+# IntelliJ IDEA
+.idea/
+*.iml
 
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# OS files
+.DS_Store
+
+# Logs
+*.log
+
+# Env / secrets
+.env
